# HCompile

./: HCompile.cabal  cabal.project
examples/gen_asm/: GenImageTables.hs  GenMathTables.hs  Owo.hs
examples/gen_c/: GenImageTables.hs  GenMathTables.hs  Owo.hs
src/: CGenerate.hs  HCompile.hs  Main.hs
test/: file.h
test/gen_asm/: image_tables.asm  math_tables.asm  owo.asm
test/gen_c/: image_tables.h  math_tables.h  owo.h
