cabal-version: 3.14
name:          HCompile
version:       0.1.0.0
license:       MIT
author:        MesS00r
maintainer:    art65734521@gmail.com
build-type:    Simple

common warnings
    ghc-options: -Wall

executable HCompile
    import:           warnings

    main-is:          Main.hs
    other-modules:    HCompile

    build-depends:    base ^>=4.20.2.0,
                      mtl,
                      directory,
                      filepath,
                      JuicyPixels,
                      bytestring,
                      vector,

    hs-source-dirs:   src

    default-language: Haskell2010
