cabal-version: 3.14
name:          HCompile
version:       0.1.0.0
license:       MIT
author:        MesS00r
maintainer:    art65734521@gmail.com
build-type:    Simple

common warnings
    ghc-options: -Wall -Wno-unused-top-binds -Wno-unused-matches -Wno-type-defaults

library
    import:             warnings
    exposed-modules:    HCompile
    hs-source-dirs:     src

    build-depends:      base ^>=4.20.2.0,
                        mtl,
                        directory,
                        filepath,
                        JuicyPixels,
                        bytestring,
                        vector

    default-extensions: FlexibleInstances
                        UndecidableInstances
                        LambdaCase

    default-language:   Haskell2010

executable owo
    import:             warnings
    main-is:            Owo.hs
    hs-source-dirs:     examples/gen_c

    build-depends:      base ^>=4.20.2.0, filepath, HCompile
    default-language:   Haskell2010

executable genImageTables
    import:             warnings
    main-is:            GenImageTables.hs
    hs-source-dirs:     examples/gen_c

    build-depends:      base ^>=4.20.2.0, filepath, HCompile
    default-language:   Haskell2010

executable genMathTables
    import:             warnings
    main-is:            GenMathTables.hs
    hs-source-dirs:     examples/gen_c

    build-depends:      base ^>=4.20.2.0, filepath, random, HCompile
    default-language:   Haskell2010