cabal-version: 3.14
name:          HCompile
version:       0.1.0.0
license:       MIT
author:        MesS00r
maintainer:    art65734521@gmail.com
build-type:    Simple

common warnings
    ghc-options: -Wall -Wno-unused-top-binds -Wno-unused-matches -Wno-type-defaults

library
    import:             warnings
    exposed-modules:    HCompile
    hs-source-dirs:     src

    build-depends:      base ^>=4.20.2.0,
                        mtl,
                        directory,
                        filepath,
                        JuicyPixels,
                        bytestring,
                        vector

    default-extensions: FlexibleInstances
                        UndecidableInstances
                        LambdaCase

    default-language:   Haskell2010

executable owo4C
    import:             warnings
    main-is:            Owo.hs
    hs-source-dirs:     examples/gen_c

    build-depends:      base ^>=4.20.2.0, filepath, HCompile
    default-language:   Haskell2010

executable genImageTables4C
    import:             warnings
    main-is:            GenImageTables.hs
    hs-source-dirs:     examples/gen_c

    build-depends:      base ^>=4.20.2.0, filepath, HCompile
    default-language:   Haskell2010

executable genMathTables4C
    import:             warnings
    main-is:            GenMathTables.hs
    hs-source-dirs:     examples/gen_c

    build-depends:      base ^>=4.20.2.0, filepath, random, HCompile
    default-language:   Haskell2010

executable owo4Asm
    import:             warnings
    main-is:            Owo.hs
    hs-source-dirs:     examples/gen_asm

    build-depends:      base ^>=4.20.2.0, filepath, HCompile
    default-language:   Haskell2010

executable genImageTables4Asm
    import:             warnings
    main-is:            GenImageTables.hs
    hs-source-dirs:     examples/gen_asm

    build-depends:      base ^>=4.20.2.0, filepath, HCompile
    default-language:   Haskell2010

executable genMathTables4Asm
    import:             warnings
    main-is:            GenMathTables.hs
    hs-source-dirs:     examples/gen_asm

    build-depends:      base ^>=4.20.2.0, filepath, random, HCompile
    default-language:   Haskell2010